--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ h6 {
 }
 .banner {
 	background: #1B6EBB;
-	background: linear-gradient(to left, #1B6EBB, #5C97CE);
+	background: linear-gradient(to right, #1B6EBB, #5C97CE);
 	padding:100px 0px;
 	position:relative;
 }
@@ -110,7 +110,7 @@ h6 {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url(images/pattern.png);
+	/* background: url(images/pattern.png); */
 }
 .banner a.weblink {
 	color:#ffffff;
@@ -334,7 +334,7 @@ h6 {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url(images/pattern.png);
+	/* background: url(images/pattern.png); */
 }
 .bx-prev {
 	left: -90px !important;
@@ -456,7 +456,7 @@ input {
 }
 .download {
 	background: #1B6EBB;
-	background: linear-gradient(to left, #1B6EBB, #5C97CE);
+	background: linear-gradient(to right, #1B6EBB, #5C97CE);
 	padding:100px 0px;
 	position:relative;
 }
@@ -468,7 +468,7 @@ input {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background: url(images/pattern.png);
+	/* background: url(images/pattern.png); */
 }
 .download ul {
 	list-style: none;
